fixed ping status overflowing box

--- a/webUI/theme.css
+++ b/webUI/theme.css
@@ -742,7 +742,7 @@ select {
     margin-bottom: 6px;
   }
   .devtools-console {
-    height: 100px;
+    min-height: 100px;
     box-sizing: border-box;
     text-align: left;
   }
